--- a/project03.html
+++ b/project03.html
@@ -250,7 +250,7 @@
                         <div class="next-project-wrap">
                             <div class="next-project-image" style="background-image:url(images/04hero.jpg)"></div>
                             <a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="project04.html">
-                                <div class="main-title">Born <span>Wild</span></div>
+                                <div class="main-title">Rising <span>Temp</span></div>
                                 <div class="main-subtitle">Next Project</div>
                             </a>
                         </div>
