--- a/index.html
+++ b/index.html
@@ -223,13 +223,10 @@
                 <div id="footer-container">
 
                     <div id="counter-wrap" data-hover="04">
-                    	<span data-slide-count="1">01</span>
-                        <span data-slide-count="2">02</span>
-                        <span data-slide-count="3">03</span>
-                        <span data-slide-count="4">04</span>
-                        <!-- <span data-slide-count="5">05</span>
-                        <span data-slide-count="6">06</span>
-                        <span data-slide-count="7">07</span> -->
+                    	<span class="slide-count" data-slide-count="1">01</span>
+                        <span class="slide-count" data-slide-count="2">02</span>
+                        <span class="slide-count" data-slide-count="3">03</span>
+                        <span class="slide-count" data-slide-count="4">04</span>
                     </div>
 
                     <div class="socials-wrap">
