--- a/index.html
+++ b/index.html
@@ -68,16 +68,15 @@
                         <div class="outer">
                             <div class="inner">
                                 <ul data-breakpoint="1025" class="flexnav">
-                                    <li class="link menu-timeline active"><a class="link" href="#">Home</a>
+                                    <li class="link menu-timeline active"><a class="link" href="#">Index</a>
                                       <ul>
-                                        <li><a class="ajax-link active" href="index.html" data-type="page-transition">Split Slider</a></li>
-                                        <li><a class="ajax-link" href="index-centered.html" data-type="page-transition">Centerd Slider</a></li>
-                                        <li><a class="ajax-link" href="index-full.html" data-type="page-transition">Fullscreen Slider</a></li>
-                                        <li><a class="ajax-link" href="index-fullmenu.html" data-type="page-transition">Overlay menur</a></li>
+                                        <li><a class="ajax-link" href="project01.html" data-type="page-transition">Kendrick Lamar</a></li>
+                                        <li><a class="ajax-link" href="project02.html" data-type="page-transition">Bite Rite</a></li>
+                                        <li><a class="ajax-link" href="project03.html" data-type="page-transition">3D Exploration</a></li>
+                                        <li><a class="ajax-link" href="project04.html" data-type="page-transition">Rising Temp</a></li>
                                       </ul>
                                     </li>
                                     <li class="link menu-timeline"><a class="ajax-link link" data-type="page-transition" href="about.html">About</a></li>
-                                    <li class="link menu-timeline"><a class="ajax-link link" data-type="page-transition" href="projectindex.html">Index</a></li>
 																		</li>
                                 </ul>
                             </div>
