--- a/project02.html
+++ b/project02.html
@@ -171,11 +171,11 @@
 
 
                         <!-- Row -->
-                        <div class="vc_row row_padding_top row_padding_bottom">
+                        <!-- <div class="vc_row row_padding_top row_padding_bottom">
 
                             <div class="container has-animation" data-delay="150">
 
-                                <div class=" one_third"><h3>The Application</h3></div>
+                                <div class=" one_third"><h3>High-</h3></div>
 
                                 <div class=" two_third last">
                                     <p>Bite Rite is designed to fit the health goals your body deserves.</p>
@@ -183,7 +183,7 @@
 
                             </div>
 
-                        </div>
+                        </div> -->
                         <!--/Row -->
 
 
