--- a/about.html
+++ b/about.html
@@ -12,10 +12,10 @@
 		ga('send', 'pageview');
 	</script>
 
-    <title>Grenada - About Us</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Download the best Creative Portfolio HTML Template in 2018" />
-    <meta name="author" content="ClaPat Studio">
+		<title>Sonica Katoch</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Portfolio" />
+		<meta name="author" content="Sonica Katoch">
     <meta charset="UTF-8" />
     <link rel="icon" type="image/ico" href="favicon.ico" />
     <link href="style.css" rel="stylesheet" />
