--- a/project01.html
+++ b/project01.html
@@ -17,7 +17,7 @@
 		<meta name="description" content="Portfolio" />
 		<meta name="author" content="Sonica Katoch">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/ico" href="favicon.ico" />
+    <link rel="icon" type="image/ico" href="pizza.ico" />
     <link href="style.css" rel="stylesheet" />
     <link href="css/font-awesome.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700" rel="stylesheet">
