--- a/project03.html
+++ b/project03.html
@@ -265,9 +265,9 @@
 
             <!-- Footer -->
             <footer class="hidden">
-                <!-- <div id="footer-container">
+                <div id="footer-container">
 
-                    <div class="copyright-wrap">
+                    <!-- <div class="copyright-wrap">
                         <div class="copyright-icon"><i class="fa fa-copyright" aria-hidden="true"></i></div>
                         <div class="copyright-text">Copyright</div>
                         <div class="copyright">
