--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                 <ul data-breakpoint="1025" class="flexnav">
                                     <li class="link menu-timeline active"><a class="link" href="#">Index</a>
                                       <ul>
-                                        <li><a class="ajax-link" href="project01.html" data-type="page-transition">Kendrick Lamar</a></li>
+                                        <li><a class="ajax-link" href="project01.html" data-type="page-transition">Kendrick</a></li>
                                         <li><a class="ajax-link" href="project02.html" data-type="page-transition">Bite Rite</a></li>
                                         <li><a class="ajax-link" href="project03.html" data-type="page-transition">3D Exploration</a></li>
                                         <li><a class="ajax-link" href="project04.html" data-type="page-transition">Rising Temp</a></li>
