--- a/project03.html
+++ b/project03.html
@@ -169,36 +169,7 @@
 
                             <div class="container">
 
-                                <!-- Video Player -->
-                                <div class="video-wrapper">
 
-                                    <div class="video-cover" data-src="images/projects/hate.jpg"></div>
-                                    <video class="bgvid" id="myVideo" controls loop preload="auto" >
-                                        <source src="https://mathematic.gosimian.com/assets/videos/Gesaffelstein_Hate-or-Glory.mp4" type="video/mp4">
-                                    </video>
-
-                                    <div class="control">
-                                        <div class="btmControl">
-                                            <div class="progress-bar">
-                                                <div class="progress">
-                                                    <span class="bufferBar"></span>
-                                                    <span class="timeBar"></span>
-                                                </div>
-                                            </div>
-                                            <div class="video-btns">
-                                                <div class="sound sound2 btn" title="Mute/Unmute sound">
-                                                    <i class="fa fa-volume-up" aria-hidden="true"></i>
-                                                    <i class="fa fa-volume-off" aria-hidden="true"></i>
-                                                </div>
-                                                <div class="btnFS btn" title="Switch to full screen">
-                                                    <i class="fa fa-expand" aria-hidden="true"></i>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                </div>
-                                <!--/Video Player -->
 
                             </div>
 
@@ -207,7 +178,7 @@
 
 
                     	<!-- Row -->
-                        <div class="vc_row small text-align-center">
+                        <!-- <div class="vc_row small text-align-center">
 
                             <div class="container">
 
@@ -237,7 +208,7 @@
 
                             </div>
 
-                        </div>
+                        </div> -->
                         <!--/Row -->
 
 
