--- a/project03.html
+++ b/project03.html
@@ -143,73 +143,79 @@
                 <div id="main-content">
                 	<div id="main-page-content">
 
-
-                     	<!-- Row -->
-                        <div class="vc_row row_padding_top row_padding_bottom">
-
-                            <div class="container">
-
-                                <div class="one_third has-animation" data-delay="10">
-                                	<h4>Baseball is a bat and ball game played between two opposing teams.</h4>
-                                </div>
-
-                                <div class="two_third has-animation last" data-delay="50">
-                                    <p>The first objective of the batting team is to have a player reach first base safely. A player on the batting team who reaches first base without being called out can attempt to advance to subsequent bases as a runner, either immediately or during teammates' turns batting. The fielding team tries to prevent runs by getting batters or runners out, which forces them out of the field of play. <br><br> Both the pitcher and fielders have methods of getting the batting team's players out. The opposing teams switch back and forth between batting and fielding; the batting team's turn to bat is over once the fielding team records three outs. One turn batting for each team constitutes an inning.</p>
-                                    <a href="http://mathematic.tv/works/" target="_blank" class="link"><span>Made by Mathematic</span></a>
-                                </div>
-
-                            </div>
-
-                        </div>
-                        <!--/Row -->
-
-
                      	<!-- Row -->
                     	<div class="vc_row full row_padding_bottom has-animation" data-delay="10">
 
-                            <div class="container">
-
-
-
-                            </div>
-
-                        </div>
+                            <div class="container"></div>
+											</div>
                         <!--/Row -->
 
+												<!-- Row -->
+												<!-- <div class="vc_row row_padding_bottom">
 
-                    	<!-- Row -->
-                        <!-- <div class="vc_row small text-align-center">
+														<div class="container">
 
-                            <div class="container">
+																<div class="one_half">
 
-                                <h3 class="has-animation" data-delay="100">Reviews about the movie</h3>
-                                <hr>
+																		<figure class="has-animation" data-delay="10" >
+																				<img src="images/projects/3d01.jpg" alt="Image Title">
+																		</figure>
 
-                                <div class="text-carousel has-animation" data-delay="10">
+																</div>
 
-                                    <div class="text-carousel-item">
-                                        <p>"These guys are amazing. I really like this theme and the customer support is just amazing. <br class="destroy">Thank you for all of your support."</p>                                    <div class="user-review">Sultan0254 - Themeforest</div>
-                                    </div>
+																<div class="one_half last">
+
+																		<figure class="has-animation" data-delay="20" >
+																				<img src="images/projects/3d01.jpg" alt="Image Title">
+																		</figure>
+
+																</div>
+
+														</div>
+
+												</div> -->
+												<!--/Row -->
+
+												<!-- Collage -->
+												<div id="justified-grid">
+
+														<!-- Collage item with pop-up -->
+														<div class="collage-thumb">
+																<a class="image-link" href="images/projects/3d01.jpg">
+																		<img src="images/projects/3d01.jpg" alt="img" />
+																		<div class="thumb-info">Caption Image</div>
+																</a>
+														</div>
+
+														<!-- Collage item with pop-up -->
+														<div class="collage-thumb">
+																<a class="image-link" href="images/projects/3d01.jpg">
+																		<img src="images/projects/3d01.jpg" alt="img" />
+																		<div class="thumb-info">Caption Image</div>
+																</a>
+														</div>
+
+														<!-- Collage item with pop-up -->
+														<div class="collage-thumb">
+																<a class="image-link" href="images/projects/3d01.jpg">
+																		<img src="images/projects/3d01.jpg" alt="img" />
+																		<div class="thumb-info">Caption Image</div>
+																</a>
+														</div>
+
+														<!-- Collage item with pop-up -->
+														<div class="collage-thumb">
+																<a class="image-link" href="images/projects/3d01.jpg">
+																		<img src="images/projects/3d01.jpg" alt="img" />
+																		<div class="thumb-info">Caption Image</div>
+																</a>
+														</div>
+
+												</div>
+												<!--/Collage -->
 
 
-                                    <div class="text-carousel-item">
-                                        <p>"The design is beautiful, elegant and minimal. The customer service was amazing, asked for a <br class="destroy">404 page and they provided me one free of charge. "</p>
-                                        <div class="user-review">Rmbettencourt - Themeforest</div>
-                                    </div>
 
-
-                                    <div class="text-carousel-item">
-                                        <p>"Maestro is one of my favorite theme and I bought quite a few from ThemeForest"</p>
-                                        <div class="user-review">Oratorio - Themeforest</div>
-                                    </div>
-
-                                </div>
-
-
-                            </div>
-
-                        </div> -->
-                        <!--/Row -->
 
 
                     </div>
