--- a/project03.html
+++ b/project03.html
@@ -189,9 +189,9 @@
 
 														<!-- Collage item with pop-up -->
 														<div class="collage-thumb">
-																<a class="image-link" href="images/projects/3d01.jpg">
-																		<img src="images/projects/3d01.jpg" alt="img" />
-																		<div class="thumb-info">Caption Image</div>
+																<a class="image-link" href="images/projects/chess01.jpg">
+																		<img src="images/projects/chess01.jpg" alt="img" />
+																		<div class="thumb-info">Sci-Fi Chessboard</div>
 																</a>
 														</div>
 
