--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <!-- Logo -->
                 <div id="logo" class="hide-ball">
                     <a class="ajax-link" data-type="page-transition" href="index.html">
-                        <img class="black-logo" src="images/logo.png" alt="ClaPat Logo">
-                        <img class="white-logo" src="images/logo-white.png" alt="ClaPat Logo">
+                        <img class="black-logo" src="images/logo.png" alt="Sonics Logo">
+                        <img class="white-logo" src="images/logo-white.png" alt="Sonica Logo">
                     </a>
                 </div>
                 <!--/Logo -->
