--- a/about.html
+++ b/about.html
@@ -12,12 +12,12 @@
 		ga('send', 'pageview');
 	</script>
 
-		<title>Sonica Katoch</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="Portfolio" />
-		<meta name="author" content="Sonica Katoch">
+    <title>Sonica Katoch</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Portfolio" />
+    <meta name="author" content="Sonica Katoch">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/ico" href="pizza.png"/>
+    <link rel="icon" type="image/ico" href="pizza.png" />
     <link href="style.css" rel="stylesheet" />
     <link href="css/font-awesome.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,600,700" rel="stylesheet">
@@ -65,25 +65,25 @@
 
                 <!-- Navigation -->
 								<nav>
-                	<div class="nav-height">
-                        <div class="outer">
-                            <div class="inner">
-                                <ul data-breakpoint="1025" class="flexnav">
-                                    <li class="link menu-timeline active"><a class="link" href="#">Index</a>
-                                      <ul>
-                                        <li><a class="ajax-link" href="project01.html" data-type="page-transition">Kendrick Lamar</a></li>
-                                        <li><a class="ajax-link" href="project02.html" data-type="page-transition">Bite Rite</a></li>
-                                        <li><a class="ajax-link" href="project03.html" data-type="page-transition">3D Exploration</a></li>
-                                        <li><a class="ajax-link" href="project04.html" data-type="page-transition">Rising Temp</a></li>
-                                      </ul>
-                                    </li>
-                                    <li class="link menu-timeline"><a class="ajax-link link" data-type="page-transition" href="about.html">About</a></li>
+									<div class="nav-height">
+												<div class="outer">
+														<div class="inner">
+																<ul data-breakpoint="1025" class="flexnav">
+																		<li class="link menu-timeline active"><a class="link" href="#">Index</a>
+																			<ul>
+																				<li><a class="ajax-link" href="project01.html" data-type="page-transition">Kendrick</a></li>
+																				<li><a class="ajax-link" href="project02.html" data-type="page-transition">Bite Rite</a></li>
+																				<li><a class="ajax-link" href="project03.html" data-type="page-transition">3D Exploration</a></li>
+																				<li><a class="ajax-link" href="project04.html" data-type="page-transition">Rising Temp</a></li>
+																			</ul>
 																		</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </nav>
+																		<li class="link menu-timeline"><a class="ajax-link link" data-type="page-transition" href="about.html">About</a></li>
+																		</li>
+																</ul>
+														</div>
+												</div>
+										</div>
+								</nav>
                 <!--/Navigation -->
 
                 <!-- Menu Burger -->
@@ -108,7 +108,7 @@
                     <div id="hero-styles" class="parallax-onscroll">
                         <div id="hero-caption" class="">
                             <div class="inner">
-                                <h1 class="hero-title">Our <br class="destroy"><span>Office</span></h1>
+                                <h1 class="hero-title">Sonica <br class="destroy"><span>Katoch</span></h1>
                                 <h2 class="hero-subtitle">You should visit us. Our secretary makes a good coffee.</h2>
                             </div>
                         </div>
@@ -207,7 +207,7 @@
 
                             <hr>
 
-                            <a href="contact.html" class="clapat-button rounded outline ajax-link has-animation link" data-delay="100" data-type="page-transition" ><span>Contact Us</span></a>
+                            <a href="contact.html" class="clapat-button rounded outline ajax-link has-animation link" data-delay="100" data-type="page-transition" ><span>Hit Me Up</span></a>
 
                         </div>
 
@@ -228,22 +228,14 @@
             <footer class="hidden">
                 <div id="footer-container">
 
-                    <div class="copyright-wrap">
-                        <div class="copyright-icon"><i class="fa fa-copyright" aria-hidden="true"></i></div>
-                        <div class="copyright-text">Copyright</div>
-                        <div class="copyright">
-                            <p>2018 © <a class="link" target="_blank" href="https://www.clapat.com/themes/grenada/">Grenada Theme</a>. Design by <a class="link" target="_blank" href="https://www.clapat.com/">Clapat</a>.</p>
-                        </div>
-                    </div>
-
-                    <div class="socials-wrap">
+										<div class="socials-wrap">
                         <div class="socials-icon"><i class="fa fa-share-alt" aria-hidden="true"></i></div>
-                        <div class="socials-text">Follow Us</div>
+                        <div class="socials-text">Follow Me</div>
                         <ul class="socials">
                             <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.facebook.com/clapat.ro" target="_blank">Fb</a></span></li>
-                            <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.dribbble.com/clapat" target="_blank">Db</a></span></li>
+                            <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.linkedin.com/in/sonicakatoch" target="_blank">in</a></span></li>
                             <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.twitter.com/clapatdesign" target="_blank">Tw</a></span></li>
-                            <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.com/clapat" target="_blank">Be</a></span></li>
+                            <li><span class="parallax-wrap"><a class="parallax-element" href="https://www.behance.net/sonicakato64a4" target="_blank">Be</a></span></li>
                         </ul>
                     </div>
 
