--- a/project03.html
+++ b/project03.html
@@ -183,35 +183,35 @@
 														<div class="collage-thumb">
 																<a class="image-link" href="images/projects/3d01.jpg">
 																		<img src="images/projects/3d01.jpg" alt="img" />
-																		<div class="thumb-info">Caption Image</div>
+																		<div class="thumb-info"></div>
 																</a>
 														</div>
 
 														<!-- Collage item with pop-up -->
 														<div class="collage-thumb">
 																<a class="image-link" href="images/projects/chess01.jpg">
-																		<img src="images/projects/chess01.jpg" alt="img" />
-																		<div class="thumb-info">Sci-Fi Chessboard</div>
+																		<img src="images/projects/3d02.jpg" alt="img" />
+																		<div class="thumb-info"></div>
 																</a>
 														</div>
 
 														<!-- Collage item with pop-up -->
 														<div class="collage-thumb">
 																<a class="image-link" href="images/projects/3d01.jpg">
-																		<img src="images/projects/3d01.jpg" alt="img" />
-																		<div class="thumb-info">Caption Image</div>
+																		<img src="images/projects/3d03.jpg" alt="img" />
+																		<div class="thumb-info"></div>
 																</a>
 														</div>
 
 														<!-- Collage item with pop-up -->
-														<div class="collage-thumb">
+														<!-- <div class="collage-thumb">
 																<a class="image-link" href="images/projects/3d01.jpg">
 																		<img src="images/projects/3d01.jpg" alt="img" />
 																		<div class="thumb-info">Caption Image</div>
 																</a>
 														</div>
 
-												</div>
+												</div> -->
 												<!--/Collage -->
 
 
