about project revisions

--- a/rising-temp.html
+++ b/rising-temp.html
@@ -151,6 +151,8 @@
 
                                 <div class="one_third has-animation" data-delay="10">
                                 	<h4>About the Project</h4>
+																	<h6>Experience Website</h6>
+																	<h6>Personal Project</h6>
                                 </div>
 
                                 <div class="two_third has-animation last" data-delay="50">
