--- a/bite-rite.html
+++ b/bite-rite.html
@@ -136,9 +136,31 @@
                 <div id="main-content">
                 	<div id="main-page-content">
 
+										<!-- Row -->
+										 <div class="vc_row row_padding_top row_padding_bottom">
+
+												 <div class="container">
+
+														 <div class="one_third has-animation" data-delay="10">
+															 <h4>About the Project</h4>
+															 <h6>Mobile Design</h6>
+															 <h6>Branding</h6>
+															 <h6>Identity</h6>
+														 </div>
+
+														 <div class="two_third has-animation last" data-delay="50">
+																 <p>Bite Rite is a concept for a food delivery application that provides users the option to track their food orders based on nutritional value. This design was created to correspond with the rising trends of food orders placed through smartphones. This application will help users understand their food intake in conjunction with the prominant mobile food service industry.</p>
+																 <a href="https://www.behance.net/gallery/75810985/Bite-Rite" target="_blank" class="link"><span>Read More</span></a>
+														 </div>
+
+												 </div>
+
+										 </div>
+										 <!--/Row -->
+
 
                      	<!-- Row -->
-                        <div class="vc_row small row_padding_top row_padding_bottom">
+                        <!-- <div class="vc_row small row_padding_top row_padding_bottom">
 
                             <div class="container">
 
@@ -148,7 +170,7 @@
 
                             </div>
 
-                        </div>
+                        </div> -->
                         <!--/Row -->
 
 
