--- a/kendrick.html
+++ b/kendrick.html
@@ -143,6 +143,9 @@
 
                                 <div class="one_third has-animation" data-delay="10">
                                 	<h4>About the Project</h4>
+																	<h6>Branding</h6>
+																	<h6>Web/Mobile Design</h6>
+																	<h6>Identity</h6>
                                 </div>
 
                                 <div class="two_third has-animation last" data-delay="50">
