about.html email

--- a/about.html
+++ b/about.html
@@ -170,7 +170,7 @@
                         <div class="container">
 
                             <div class="one_half has-animation" data-delay="150">
-                            	<p>Why to choose our themes?</p>
+                            	<p>Where the </p>
                             	<h3>Just some of the reasons <br class="destroy">users choose us</h3>
                             </div>
 
@@ -207,7 +207,7 @@
 
                             <hr>
 
-                            <a href="contact.html" class="clapat-button rounded outline ajax-link has-animation link" data-delay="100" data-type="page-transition" ><span>Hit Me Up</span></a>
+                            <a href="mailto:sonicakat@gmail.com" class="clapat-button rounded outline ajax-link has-animation link" data-delay="100" data-type="page-transition" ><span>Say Hi</span></a>
 
                         </div>
 
