--- a/about.html
+++ b/about.html
@@ -108,8 +108,8 @@
                     <div id="hero-styles" class="parallax-onscroll">
                         <div id="hero-caption" class="">
                             <div class="inner">
-                                <h1 class="hero-title">Sonica <br class="destroy"><span>Katoch</span></h1>
-                                <h2 class="hero-subtitle">You should visit us. Our secretary makes a good coffee.</h2>
+                                <!-- <h1 class="hero-title">Sonica <span>Katoch</span></h1>
+                                <h2 class="hero-subtitle">You should visit us. Our secretary makes a good coffee.</h2> -->
                             </div>
                         </div>
                     </div>
@@ -125,73 +125,26 @@
                     <div class="vc_row">
                         <div class="container">
 
-                            <h2 >We cover a large range of creative digital projects, platforms<br class="destroy"> and campaigns to create experiences.</h2>
-
-                            <hr><hr><hr><hr>
-
-                            <h4 class="has-animation" data-delay="10">Our clients:</h4>
-                            <p class="has-animation" data-delay="10">Proudly served some of the most famous brands:</p>
-
-                            <hr><hr>
+														<!-- <h1 class="hero-title">Sonica <span>Katoch</span></h1> -->
+														<h2>Sonica Katoch is an Experience Designer living in Toronto.</h2>
 
                         </div>
                     </div>
                     <!--/Row -->
-
-
-
-                    <!-- Row -->
-                        <div class="vc_row row_padding_bottom text-align-center">
-                            <div class="container">
-
-                                <!-- Clients Table -->
-                                <ul class="clients-table has-animation" data-delay="10">
-                                    <li class="link"><img src="images/client-01.png" alt="client"></li>
-                                    <li class="link"><img src="images/client-02.png" alt="client"></li>
-                                    <li class="link"><img src="images/client-03.png" alt="client"></li>
-                                    <li class="link"><img src="images/client-04.png" alt="client"></li>
-                                    <li class="link"><img src="images/client-05.png" alt="client"></li>
-                                    <li class="link"><img src="images/client-06.png" alt="client"></li>
-                                    <li class="link"><img src="images/client-07.png" alt="client"></li>
-                                    <li class="link"><img src="images/client-08.png" alt="client"></li>
-                                </ul>
-                                <!--/Clients Table -->
-
-                        </div>
-                    </div>
-                    <!--/Row -->
-
-
-
-
-                    <!-- Row -->
+        						<!-- Row -->
                     <div class="vc_row row_padding_top row_padding_bottom">
 
                         <div class="container">
 
                             <div class="one_half has-animation" data-delay="150">
-                            	<p>Where the </p>
-                            	<h3>Just some of the reasons <br class="destroy">users choose us</h3>
+                            	<p>Where the Hell?</p>
+                            	<h6>Just some of the reasons</h6>
                             </div>
 
                             <div class="one_half last has-animation" data-delay="200">
-                                <div class="clapat-icon">
-                                    <i class="fa fa-life-ring" aria-hidden="true"></i>
-                                    <h6>Friendly Support</h6>
-                                    <p>We will be with you every step of the way. It’s a promise!</p>
-                                </div>
-                                <div class="clapat-icon">
-                                    <i class="fa fa-repeat" aria-hidden="true"></i>
-                                    <h6>Money Back Guarantee</h6>
-                                    <p>If you don’t like our theme, we will refund all your money back.</p>
-                                </div>
-                                <div class="clapat-icon">
-                                    <i class="fa fa-trophy" aria-hidden="true"></i>
-                                    <h6>Premium Quality</h6>
-                                    <p>All Themes are made by Envato Elite Author - ClaPat</p>
-                                </div>
-                            </div>
-
+                              <p>Where the Hell?</p>
+															<h6>blah blah</h6>
+														</div>
                         </div>
 
                     </div>
