--- a/about.html
+++ b/about.html
@@ -71,10 +71,10 @@
 																<ul data-breakpoint="1025" class="flexnav">
 																		<li class="link menu-timeline active"><a class="link" href="#">Index</a>
 																			<ul>
-																				<li><a class="ajax-link" href="project01.html" data-type="page-transition">Kendrick</a></li>
-																				<li><a class="ajax-link" href="project02.html" data-type="page-transition">Bite Rite</a></li>
-																				<li><a class="ajax-link" href="project03.html" data-type="page-transition">3D Exploration</a></li>
-																				<li><a class="ajax-link" href="project04.html" data-type="page-transition">Rising Temp</a></li>
+																				<li><a class="ajax-link" href="kendrick.html" data-type="page-transition">Kendrick</a></li>
+																				<li><a class="ajax-link" href="bite-rite.html" data-type="page-transition">Bite Rite</a></li>
+																				<li><a class="ajax-link" href="3d-exploration.html" data-type="page-transition">3D Exploration</a></li>
+																				<li><a class="ajax-link" href="rising-temp.html" data-type="page-transition">Rising Temp</a></li>
 																			</ul>
 																		</li>
 																		<li class="link menu-timeline"><a class="ajax-link link" data-type="page-transition" href="about.html">About</a></li>
