--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
                                 <!-- Section Slide -->
                                 <div class="swiper-slide active" data-number="01" data-slide="1">
-                                    <a class="ajax-link-project" data-type="page-transition" href="project01.html">
+                                    <a class="ajax-link-project" data-type="page-transition" href="kendrick.html">
                                     	<div class="slide-title" data-number="01"><span>Kendrick</span></div>
                                     </a>
                                     <div class="slide-caption" data-slide-caption="1">A modern identity created for Kendrick Lamar</div>
@@ -124,7 +124,7 @@
 
                                 <!-- Section Slide -->
                                 <div class="swiper-slide" data-number="02" data-slide="2">
-                                    <a class="ajax-link-project" data-type="page-transition" href="project02.html">
+                                    <a class="ajax-link-project" data-type="page-transition" href="bite-rite.html">
                                     	<div class="slide-title" data-number="02"><span>Bite Rite</span></div>
                                     </a>
                                     <div class="slide-caption" data-slide-caption="2">Eating, with a conscious</div>
@@ -134,7 +134,7 @@
 
                                 <!-- Section Slide -->
                                 <div class="swiper-slide" data-number="03" data-slide="3">
-                                    <a class="ajax-link-project" data-type="page-transition" href="project03.html">
+                                    <a class="ajax-link-project" data-type="page-transition" href="3d-exploration.html">
                                     	<div class="slide-title" data-number="03"><span>3D Exploration</span></div>
                                     </a>
                                    	<div class="slide-caption" data-slide-caption="3">Contemporary 3D renders composited using various textures, shapes & materials</div>
@@ -144,7 +144,7 @@
 
                                 <!-- Section Slide -->
                                 <div class="swiper-slide" data-number="04" data-slide="4">
-                                    <a class="ajax-link-project" data-type="page-transition" href="project04.html">
+                                    <a class="ajax-link-project" data-type="page-transition" href="rising-temp.html">
                                     	<div class="slide-title" data-number="04"><span>Rising Temp</span></div>
                                     </a>
                                     <div class="slide-caption" data-slide-caption="4">It is confirmed that human activity has severely impacted the Earth’s current warming pattern. What can we do about it?</div>
