--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@
                         <div class="container">
 
 														<!-- <h1 class="hero-title">Sonica <span>Katoch</span></h1> -->
-														<h2>Sonica Katoch is an Experience Designer living in Toronto.</h2>
+														<h1>Sonica Katoch is an Experience Designer living in Toronto.</h1>
 
                         </div>
                     </div>
@@ -137,12 +137,12 @@
                         <div class="container">
 
                             <div class="one_half has-animation" data-delay="150">
-                            	<p>Where the Hell?</p>
+                            	<p>How the hell??</p>
                             	<h6>Just some of the reasons</h6>
                             </div>
 
                             <div class="one_half last has-animation" data-delay="200">
-                              <p>Where the Hell?</p>
+                              <p>Who the hell?</p>
 															<h6>blah blah</h6>
 														</div>
                         </div>
