--- a/about.html
+++ b/about.html
@@ -137,13 +137,53 @@
                         <div class="container">
 
                             <div class="one_half has-animation" data-delay="150">
-                            	<p>How the hell??</p>
-                            	<h6>Just some of the reasons</h6>
+                            	<p>Where the hell?</p>
+                            	<h6>Interaction Designer</h6>
+															<h6>Toronto Fashion Exchange</h6>
+															<h6>2019-Present</h6>
+															<br></br>
+															<h6>Interaction Design Researcher</h6>
+															<h6>George Brown College</h6>
+															<h6>2017-2018</h6>
+															<br></br>
                             </div>
 
-                            <div class="one_half last has-animation" data-delay="200">
-                              <p>Who the hell?</p>
-															<h6>blah blah</h6>
+														<div class="one_half last has-animation" data-delay="150">
+                            	<p>Who the hell?</p>
+                            	<h6>Interaction Designer</h6>
+															<h6>Toronto Fashion Exchange</h6>
+															<h6>2019-Present</h6>
+															<br></br>
+															<h6>Interaction Design Researcher</h6>
+															<h6>George Brown College</h6>
+															<h6>2017-2018</h6>
+                            </div>
+
+                            <div class="one_half has-animation" data-delay="150">
+                              <p>Schoolin'</p>
+															<h6><h6>Interaction Design and Development</h6>
+															<h6>George Brown College</h6>
+															<h6>2017-2019</h6>
+															<br></br>
+															<h6><h6>Honours Political Science</h6>
+															<h6>McMaster University</h6>
+															<h6>2010-2014</h6>
+
+														</div>
+
+														<div class="one_half last has-animation" data-delay="200">
+                              <p>Check out my skills</p>
+															<h5>Tools</h6>
+															<h6>
+																Adobe Creative Suite <br></br>
+																Autodesk Maya <br></br>
+																Cinema 4D <br></br>
+																Framer X (In progress) <br></br>
+																Invision Studio <br></br>
+																Microsoft Office <br></br>
+																NVivo <br></br>
+																Sketch <br></br>
+															</h6>
 														</div>
                         </div>
 
@@ -156,11 +196,12 @@
 
                         <div class="container">
 
-                            <h2 class="has-animation" data-delay="10">Whatever your needs, we're looking forward <br class="destroy"> to hearing from you</h2>
+                            <!-- <h2 class="has-animation" data-delay="10">Whatever your needs, we're looking forward <br class="destroy"> to hearing from you</h2> -->
 
                             <hr>
 
-                            <a href="mailto:sonicakat@gmail.com" class="clapat-button rounded outline ajax-link has-animation link" data-delay="100" data-type="page-transition" ><span>Say Hi</span></a>
+                            <a href="mailto:sonicakat@gmail.com" class="clapat-button rounded outline ajax-link has-animation link" data-delay="100" data-type="page-transition"><span>Say Hi <img class="black-logo" src="images/waving-hand.png" alt="Icon"></span></a>
+
 
                         </div>
 
