--- a/about.html
+++ b/about.html
@@ -200,7 +200,7 @@
 
                             <hr>
 
-                            <a href="mailto:sonicakat@gmail.com" class="clapat-button rounded outline ajax-link has-animation link" data-delay="100" data-type="page-transition"><span>Say Hi <img class="black-logo" src="images/waving-hand.png" alt="Icon"></span></a>
+                            <a href="mailto:sonicakat@gmail.com" class="clapat-button rounded outline ajax-link has-animation link" data-delay="100" data-type="page-transition"><span>Say Hi<img class="icon" src="images/waving-hand.png" alt="Icon"></span></a>
 
 
                         </div>
