--- a/about.html
+++ b/about.html
@@ -171,20 +171,11 @@
 
 														</div>
 
-														<div class="one_half last has-animation" data-delay="200">
-                              <p>Check out my skills</p>
-															<h5>Tools</h6>
-															<h6>
-																Adobe Creative Suite <br></br>
-																Autodesk Maya <br></br>
-																Cinema 4D <br></br>
-																Framer X (In progress) <br></br>
-																Invision Studio <br></br>
-																Microsoft Office <br></br>
-																NVivo <br></br>
-																Sketch <br></br>
-															</h6>
-														</div>
+														<!-- <div class="one_half last has-animation" data-delay="150">
+                              <p>CV</p>
+															<img class="cv-icon" src="images/cv.png" alt="Icon">
+
+														</div> -->
                         </div>
 
                     </div>
