--- a/about.html
+++ b/about.html
@@ -137,7 +137,8 @@
                         <div class="container">
 
                             <div class="one_half has-animation" data-delay="150">
-                            	<p>Where the hell?</p>
+                            	<h7>Where the hell?</h7>
+															<br></br>
                             	<h6>Interaction Designer</h6>
 															<h6>Toronto Fashion Exchange</h6>
 															<h6>2019-Present</h6>
@@ -149,7 +150,8 @@
                             </div>
 
 														<div class="one_half last has-animation" data-delay="150">
-                            	<p>Who the hell?</p>
+                            	<h7>Who the hell?</h7>
+															<br></br>
                             	<h6>Interaction Designer</h6>
 															<h6>Toronto Fashion Exchange</h6>
 															<h6>2019-Present</h6>
@@ -160,7 +162,8 @@
                             </div>
 
                             <div class="one_half has-animation" data-delay="150">
-                              <p>Schoolin'</p>
+                              <h7>Schoolin'</h7>
+															<br></br>
 															<h6><h6>Interaction Design and Development</h6>
 															<h6>George Brown College</h6>
 															<h6>2017-2019</h6>
