--- a/about.html
+++ b/about.html
@@ -164,7 +164,7 @@
                             <div class="one_half has-animation" data-delay="150">
                               <h7>Schoolin'</h7>
 															<br></br>
-															<h6><h6>Interaction Design and Development</h6>
+															<h6>Interaction Design and Development</h6>
 															<h6>George Brown College</h6>
 															<h6>2017-2019</h6>
 															<br></br>
