--- a/bite-rite.html
+++ b/bite-rite.html
@@ -126,7 +126,7 @@
                 </div>
                 <div id="hero-bg-wrapper">
                     <div id="hero-image-parallax">
-                        <div id="hero-bg-image" style="background-image:url(images/02hero.jpg)"></div>
+                        <div id="hero-bg-image" style="background-image:url(images/bite-hero.jpg)"></div>
                     </div>
                 </div>
                 <!--/Hero Section -->
@@ -278,7 +278,7 @@
                     <!-- Project Navigation -->
                     <div id="project-nav">
                         <div class="next-project-wrap">
-                            <div class="next-project-image" style="background-image:url(images/03hero.jpg)"></div>
+                            <div class="next-project-image" style="background-image:url(images/3d-hero.jpg)"></div>
                             <a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="project03.html">
                                 <div class="main-title">3D <span>Exploration</span></div>
                                 <div class="main-subtitle">Next Project</div>
