--- a/kendrick.html
+++ b/kendrick.html
@@ -126,7 +126,7 @@
                 </div>
                 <div id="hero-bg-wrapper">
                     <div id="hero-image-parallax">
-                        <div id="hero-bg-image" style="background-image:url(images/01hero.jpg)"></div>
+                        <div id="hero-bg-image" style="background-image:url(images/kendrick-hero.jpg)"></div>
                     </div>
                 </div>
                 <!--/Hero Section -->
@@ -293,7 +293,7 @@
                     <!-- Project Navigation -->
                     <div id="project-nav">
                         <div class="next-project-wrap">
-                            <div class="next-project-image" style="background-image:url(images/02hero.jpg)"></div>
+                            <div class="next-project-image" style="background-image:url(images/bite-hero.jpg)"></div>
                             <a class="next-project-title next-ajax-link-project hide-ball " data-type="page-transition" href="project02.html">
                                 <div class="main-title">Bite <span>Rite</span></div>
                                 <div class="main-subtitle">Next Project</div>
