--- a/kendrick.html
+++ b/kendrick.html
@@ -174,50 +174,104 @@
                         </div>
                         <!--/Row -->
 
-
-                        <!-- Row -->
-                        <div class="vc_row row_padding_top row_padding_bottom has-animation" data-delay="10">
-
-                            <div class="container">
-
-                                <div class="slider">
-                                    <div class="slide"><img src="images/projects/kl02.jpg" alt="Image Title"></div>
-                                    <div class="slide"><img src="images/projects/kl03.jpg" alt="Image Title"></div>
-                                    <div class="slide"><img src="images/projects/kl04.jpg" alt="Image Title"></div>
-                                    <div class="slide"><img src="images/projects/kl05.jpg" alt="Image Title"></div>
-                                    <div class="slide"><img src="images/projects/kl06.jpg" alt="Image Title"></div>
-                                    <div class="slide"><img src="images/projects/kl07.jpg" alt="Image Title"></div>
-                                </div>
-
-                            </div>
-
-                        </div>
-                        <!--/Row -->
-
-
-                        <!-- Row -->
-                        <!-- <div class="vc_row full">
-
-                            <div class="container">
-
-                                <figure class="has-animation" data-delay="50" >
-                                    <img src="images/projects/kl08.jpg" alt="Image Title">
-                                    <figcaption>Image Caption</figcaption>
-                                </figure>
-
-                            </div>
-
-                        </div> -->
-                        <!--/Row -->
-
 												<!-- Row -->
-												<div class="vc_row row_padding_top">
+												<div class="vc_row full">
 
 														<div class="container">
 
-																<figure class="has-animation" data-delay="10" >
+																<figure class="has-animation" data-delay="50" >
+																		<img src="images/projects/kl02.jpg" alt="Image Title">
+																		<!-- <figcaption>Image Caption</figcaption> -->
+																</figure>
+
+														</div>
+
+												</div>
+												<!--/Row -->
+
+												<!-- Row -->
+												<div class="vc_row full">
+
+														<div class="container">
+
+																<figure class="has-animation" data-delay="50" >
+																		<img src="images/projects/kl03.jpg" alt="Image Title">
+																		<!-- <figcaption>Image Caption</figcaption> -->
+																</figure>
+
+														</div>
+
+												</div>
+												<!--/Row -->
+
+												<!-- Row -->
+												<div class="vc_row full">
+
+														<div class="container">
+
+																<figure class="has-animation" data-delay="50" >
+																		<img src="images/projects/kl04.jpg" alt="Image Title">
+																		<!-- <figcaption>Image Caption</figcaption> -->
+																</figure>
+
+														</div>
+
+												</div>
+												<!--/Row -->
+
+												<!-- Row -->
+												<div class="vc_row full">
+
+														<div class="container">
+
+																<figure class="has-animation" data-delay="50" >
+																		<img src="images/projects/kl05.jpg" alt="Image Title">
+																		<!-- <figcaption>Image Caption</figcaption> -->
+																</figure>
+
+														</div>
+
+												</div>
+												<!--/Row -->
+
+												<!-- Row -->
+												<div class="vc_row full">
+
+														<div class="container">
+
+																<figure class="has-animation" data-delay="50" >
+																		<img src="images/projects/kl06.jpg" alt="Image Title">
+																		<!-- <figcaption>Image Caption</figcaption> -->
+																</figure>
+
+														</div>
+
+												</div>
+												<!--/Row -->
+
+												<!-- Row -->
+												<div class="vc_row full">
+
+														<div class="container">
+
+																<figure class="has-animation" data-delay="50" >
+																		<img src="images/projects/kl07.jpg" alt="Image Title">
+																		<!-- <figcaption>Image Caption</figcaption> -->
+																</figure>
+
+														</div>
+
+												</div>
+												<!--/Row -->
+
+												<!-- Row -->
+												<div class="vc_row full">
+
+														<div class="container">
+
+																<figure class="has-animation" data-delay="50" >
 																		<img src="images/projects/kl08.jpg" alt="Image Title">
-																		<!-- <figcaption>On-Boarding Screens</figcaption> -->
+																		<!-- <figcaption>Image Caption</figcaption> -->
 																</figure>
 
 														</div>
@@ -226,13 +280,13 @@
 												<!--/Row -->
 
 												<!-- Row -->
-												<div class="vc_row row_padding_top">
+												<div class="vc_row full">
 
 														<div class="container">
 
-																<figure class="has-animation" data-delay="10" >
+																<figure class="has-animation" data-delay="50" >
 																		<img src="images/projects/kl09.jpg" alt="Image Title">
-																		<!-- <figcaption>On-Boarding Screens</figcaption> -->
+																		<!-- <figcaption>Image Caption</figcaption> -->
 																</figure>
 
 														</div>
@@ -241,13 +295,13 @@
 												<!--/Row -->
 
 												<!-- Row -->
-												<div class="vc_row row_padding_top">
+												<div class="vc_row full">
 
 														<div class="container">
 
-																<figure class="has-animation" data-delay="10" >
+																<figure class="has-animation" data-delay="50" >
 																		<img src="images/projects/kl10.jpg" alt="Image Title">
-																		<!-- <figcaption>On-Boarding Screens</figcaption> -->
+																		<!-- <figcaption>Image Caption</figcaption> -->
 																</figure>
 
 														</div>
@@ -256,13 +310,13 @@
 												<!--/Row -->
 
 												<!-- Row -->
-												<div class="vc_row row_padding_top">
+												<div class="vc_row full">
 
 														<div class="container">
 
-																<figure class="has-animation" data-delay="10" >
+																<figure class="has-animation" data-delay="50" >
 																		<img src="images/projects/kl11.jpg" alt="Image Title">
-																		<!-- <figcaption>On-Boarding Screens</figcaption> -->
+																		<!-- <figcaption>Image Caption</figcaption> -->
 																</figure>
 
 														</div>
@@ -271,21 +325,19 @@
 												<!--/Row -->
 
 												<!-- Row -->
-												<div class="vc_row row_padding_top">
+												<div class="vc_row full">
 
 														<div class="container">
 
-																<figure class="has-animation" data-delay="10" >
+																<figure class="has-animation" data-delay="50" >
 																		<img src="images/projects/kl12.jpg" alt="Image Title">
-																		<!-- <figcaption>On-Boarding Screens</figcaption> -->
+																		<!-- <figcaption>Image Caption</figcaption> -->
 																</figure>
 
 														</div>
 
 												</div>
 												<!--/Row -->
-
-
 
                     </div>
                 	<!--/Main Page Content -->
