project list update

--- a/kendrick.html
+++ b/kendrick.html
@@ -142,10 +142,13 @@
                             <div class="container">
 
                                 <div class="one_third has-animation" data-delay="10">
-                                	<h4>About the Project</h4>
-																	<h6>Branding</h6>
-																	<h6>Web/Mobile Design</h6>
-																	<h6>Identity</h6>
+
+																	<h4>About the Project</h4>
+																		<h7>
+																			<dl>Branding</dl>
+																			<dl>Web/Mobile Design</dl>
+																			<dl>Identity</dl>
+																		</h7>
                                 </div>
 
                                 <div class="two_third has-animation last" data-delay="50">
