--- a/bite-rite.html
+++ b/bite-rite.html
@@ -143,9 +143,11 @@
 
 														 <div class="one_third has-animation" data-delay="10">
 															 <h4>About the Project</h4>
-															 <h6>Mobile Design</h6>
-															 <h6>Branding</h6>
-															 <h6>Identity</h6>
+																 <h7>
+																	 <dl>Mobile Design</dl>
+																 		<dl>Branding</dl>
+																			<dl>Identity</dl>
+															 </h7>
 														 </div>
 
 														 <div class="two_third has-animation last" data-delay="50">
